; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv.c_tsd_dec_ctx_init.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv.c_tsd_dec_ctx_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dec_ctx_key = common dso_local global i32 0, align 4
@jv_mem_free = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"error: cannot create thread specific key\00", align 1
@dec_ctx_dbl_key = common dso_local global i32 0, align 4
@tsd_dec_ctx_fini = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @tsd_dec_ctx_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tsd_dec_ctx_init() #0 {
  %1 = load i32, i32* @jv_mem_free, align 4
  %2 = call i64 @pthread_key_create(i32* @dec_ctx_key, i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 (...) @abort() #3
  unreachable

8:                                                ; preds = %0
  %9 = load i32, i32* @jv_mem_free, align 4
  %10 = call i64 @pthread_key_create(i32* @dec_ctx_dbl_key, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 (...) @abort() #3
  unreachable

16:                                               ; preds = %8
  %17 = load i32, i32* @tsd_dec_ctx_fini, align 4
  %18 = call i32 @atexit(i32 %17)
  ret void
}

declare dso_local i64 @pthread_key_create(i32*, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @atexit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
